--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -155,6 +155,17 @@
   <%= javascript_tag do %>
     $(function() {
       $('.year, .month, .day').addClass('form-control d-inline col-3');
+
+      $('#customer_postal_code1').jpostal({
+        postcode : [
+          '#customer_postal_code1',
+          '#customer_postal_code2'
+        ],
+        address : {
+          '#customer_prefecture' : '%3',
+          '#customer_city'       : '%4%5',
+        }
+      });
     });
 
     function nextField(i, n, m) {
