デザイン変更

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -60,7 +60,7 @@
       <div class="container">
         <div class="col-md-3 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
           <h3>このサイトについて</h3>
-          <p>XXX</p>
+          <p>美容室・美容院の総合サイトです。</p>
         </div>
       </div>
     </footer>
