--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -14,12 +14,14 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700,900' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
 </head>
 
 <body class="hold-transition login-page">
 <div class="login-box">
-  <div class="login-logo">
-    <a href="/"><b><%= @company.name %></b></a>
+  <div class="login-logo" style='font-family: "Playfair Display", Arial, serif;'>
+    <a href="/<%= @company.code %>"><b><%= @company.name %></b></a>
   </div>
 
   <%= yield %>
