--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -50,6 +50,7 @@
 
     <div class="card-footer clearfix">
       <a href="<%= edit_customer_path(@customer, company_code: @company.code ) %>" class="btn btn-sm btn-info float-left mr-2">　編集　</a>
+      <%= link_to '　削除　', customer_path(@customer, company_code: @company.code), method: :delete, class: 'btn btn-sm btn-danger float-left mr-2', data: { confirm: "削除してよろしいですか？" } %>
       <% if @customer.line? %>
         <%= link_to 'LINE通知', new_line_message_customer_path(@customer, company_code: @company.code), class: 'btn btn-sm btn-success float-left' %>
       <% end %>
