送信後エラー対応

--- a/app/views/customers/line_message/_user.html.erb
+++ b/app/views/customers/line_message/_user.html.erb
@@ -1,7 +1,7 @@
 <div class="direct-chat-msg">
   <div class="direct-chat-infos clearfix">
     <span class="direct-chat-name float-left"><%= customer.name %></span>
-    <span class="direct-chat-timestamp float-right"><%= message.created_at.strftime("%Y-%m-%d %H:%M") %></span>
+    <span class="direct-chat-timestamp float-right"><%= message.created_at.strftime("%Y/%m/%d %H:%M") %></span>
   </div>
   <div class="direct-chat-img" >▶︎</div>
   <div class="direct-chat-text">
