--- a/app/views/customers/new_line_message.html.erb
+++ b/app/views/customers/new_line_message.html.erb
@@ -26,9 +26,9 @@
       <div class="card-body">
         <div class="row">
           <div class="col-md-6">
-            <div class="card card-success direct-chat direct-chat-success">
+            <div class="card card-primary direct-chat direct-chat-primary">
               <div class="card-body">
-                <div class="direct-chat-messages">
+                <div id="message-log" class="direct-chat-messages">
                   <% @line_message_logs.each do |message_log| %>
                     <% if message_log.staff_id.present? %>
                       <%= render '/customers/line_message/staff', message: message_log %>
@@ -40,7 +40,6 @@
               </div>
             </div>
           </div>
-
           <%= render '/customers/line_message/form', customer: @customer, line_message: @line_message %>
         </div>
       </div>
@@ -51,3 +50,9 @@
     </div>
   </div>
 </section>
+
+<%= javascript_tag do %>
+  $(function() {
+    $("#message-log").scrollTop($("#message-log")[0].scrollHeight);
+  });
+<% end %>
