--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -7,8 +7,8 @@
 
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
-          <li class="breadcrumb-item"><a href="<%= homes_path(company_code: params[:company_code]) %>">ホーム</a></li>
-          <li class="breadcrumb-item"><a href="<%= customers_path(company_code: @company.code) %>"><%= Const::View::Name::CUSTOMER_INDEX %></a></li>
+          <li class="breadcrumb-item"><a href="<%= homes_path %>">ホーム</a></li>
+          <li class="breadcrumb-item"><a href="<%= customers_path %>"><%= Const::View::Name::CUSTOMER_INDEX %></a></li>
           <li class="breadcrumb-item active"><%= Const::View::Name::CUSTOMER_SHOW %></li>
         </ol>
       </div>
