--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -23,13 +23,17 @@
 
           <% @customers.each_with_index do |customer, i| %>
             <tr>
-              <td><a href="<%= customer_path(customer, company_code: @company.code ) %>"><%= customer.id.to_s %>.</td>
+              <td><a href="<%= customer_path(@company.code, customer) %>"><%= customer.id.to_s %>.</a></td>
               <td><%= customer.name.to_s %></td>
               <td><%= customer.name_kana.to_s %></td>
               <td><%= Customer.human_attribute_name("gender.#{ customer.gender }") if customer.gender %></td>
               <td><%= customer.formatted_tel_number.to_s %></td>
               <td><%= customer.birthday.strftime("%Y年%m月%d日") if customer.birthday %></td>
-              <td></td>
+              <td>
+                <% if customer.user.try(:unread_user_line_message?) %>
+                  <%= link_to '未読あり', new_line_message_customer_path(@company.code, customer), class: 'btn btn-sm btn-success float-left' %>
+                <% end %>
+              </td>
             </tr>
           <% end %>
 
