月間LINEプッシュメッセージ数表示

--- a/app/views/public/homes/index_for_system.html.erb
+++ b/app/views/public/homes/index_for_system.html.erb
@@ -23,7 +23,7 @@
           <div class="info-box-content">
             <span class="info-box-text">LINE通知</span>
             <span class="info-box-number">
-              000
+              <%= @company.get_current_month_push_message_count %>
               <small>/1,000</small>
             </span>
           </div>
