--- a/app/views/customers/line_message/_staff.html.erb
+++ b/app/views/customers/line_message/_staff.html.erb
@@ -3,7 +3,7 @@
     <span class="direct-chat-name float-right"><%= @company.name %></span>
     <span class="direct-chat-timestamp float-left"><%= message.created_at.strftime("%Y/%m/%d %H:%M") %></span>
   </div>
-  <div class="direct-chat-text">
+  <div class="direct-chat-text" style="margin-right: 0px; margin-left: 20px;">
     <%= message.message.to_s %>
   </div>
 </div>
