--- a/app/views/customers/line_message/_user.html.erb
+++ b/app/views/customers/line_message/_user.html.erb
@@ -3,7 +3,7 @@
     <span class="direct-chat-name float-left"><%= customer.name %></span>
     <span class="direct-chat-timestamp float-right"><%= message.created_at.strftime("%Y/%m/%d %H:%M") %></span>
   </div>
-  <div class="direct-chat-text">
+  <div class="direct-chat-text" style="margin-right: 20px; margin-left: 0px;">
     <%= message.message.to_s %>
   </div>
 </div>
