--- a/app/views/layouts/_main_sidebar.html.erb
+++ b/app/views/layouts/_main_sidebar.html.erb
@@ -1,22 +1,14 @@
 <aside class="main-sidebar sidebar-light-lightblue elevation-4">
 
-  <a href="<%= homes_path %>" class="brand-link">
+  <a href="<%= edit_user_path(@company.code, current_user) %>" class="brand-link">
     <img src="<%= asset_pack_path 'media/images/logo.png'%>" alt="COSMOS Logo" class="brand-image img-circle elevation-3"
          style="opacity: .8">
-    <span class="brand-text font-weight-light"><%= @company.name %></span>
+    <span class="brand-text font-weight-light">
+      <%= @company.name %>
+    </span>
   </a>
 
   <div class="sidebar">
-
-    <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-      <div class="image">
-        <img src="<%= asset_pack_path 'media/images/user-icon.png'%>" class="img-circle elevation-2" alt="<%= current_user.try(:email) %>">
-      </div>
-      <div class="info">
-        <a href="#" class="d-block"><%= current_user.try(:email) %></a>
-      </div>
-    </div>
-
     <nav class="mt-2">
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
