--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,18 @@
-<h1>Editing User</h1>
+<div class="content-header">
+  <div class="container-fluid">
+    <div class="row mb-2">
+      <div class="col-sm-6">
+        <h1 class="m-0 text-dark"><%= Const::View::Name::USER_EDIT %></h1>
+      </div>
+
+      <div class="col-sm-6">
+        <ol class="breadcrumb float-sm-right">
+          <li class="breadcrumb-item"><a href="<%= homes_path %>">ホーム</a></li>
+          <li class="breadcrumb-item active"><%= Const::View::Name::USER_EDIT %></li>
+        </ol>
+      </div>
+    </div>
+  </div>
+</div>
 
 <%= render 'form', user: @user, url: { company_code: @company.code, action: :update } %>
