--- a/app/views/customers/new_line_message.html.erb
+++ b/app/views/customers/new_line_message.html.erb
@@ -27,7 +27,7 @@
       <div class="card-body">
         <div class="row">
           <div class="col-md-6">
-            <div class="card card-primary direct-chat direct-chat-primary">
+            <div class="card">
               <div class="card-body">
                 <div id="message-log" class="direct-chat-messages" style="height: 320px;">
                   <table class="table table-bordered">
@@ -58,7 +58,7 @@
           </div>
 
           <div class="col-md-6">
-            <div class="card card-primary direct-chat direct-chat-primary">
+            <div class="card card-primary direct-chat direct-chat-default">
               <div class="card-body">
                 <div id="message-log" class="direct-chat-messages" style="height: 320px;">
                   <% @line_message_logs.each do |message_log| %>
