デザイン調整

--- a/app/views/customers/new_line_message.html.erb
+++ b/app/views/customers/new_line_message.html.erb
@@ -29,7 +29,7 @@
           <div class="col-md-6">
             <div class="card">
               <div class="card-body">
-                <div id="message-log" class="direct-chat-messages" style="height: 320px;">
+                <div class="direct-chat-messages" style="height: 320px;">
                   <table class="table table-bordered">
                     <tbody>
                       <tr>
