デザイン調整

--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -42,7 +42,7 @@
     </div>
 
     <div class="card-footer clearfix">
-      <a href="<%= new_customer_path(company_code: @company.code ) %>" class="btn btn-sm btn-info float-left">新規作成</a>
+      <a href="<%= new_customer_path(company_code: @company.code ) %>" class="btn btn-info float-left">新規作成</a>
     </div>
   </div>
 </section>
