--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -65,5 +65,9 @@
       </div>
     </footer>
   </div>
+
+  <% if notice || alert %>
+    <%= render '/layouts/notice_modal' %>
+  <% end %>
 </body>
 </html>
