デザイン調整

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -49,7 +49,7 @@
     <header id="root-header" role="banner">
       <div class="container">
         <div class="header-inner">
-          <h1><i></i><a href="#">COSMOS-s</a></h1>
+          <h1><i></i><a href="#">&nbsp;</a></h1>
         </div>
       </div>
     </header>
@@ -59,8 +59,8 @@
     <footer id="root-footer" role="contentinfo">
       <div class="container">
         <div class="col-md-3 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
-          <h3>このサイトについて</h3>
-          <p>美容室・美容院の総合サイトです。</p>
+          <h3>about this site</h3>
+          <p>in preparation.</p>
         </div>
       </div>
     </footer>
