--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -59,8 +59,8 @@
     <footer id="root-footer" role="contentinfo">
       <div class="container">
         <div class="col-md-3 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
-          <h3>about this site</h3>
-          <p>in preparation.</p>
+          <h3>&nbsp;</h3>
+          <p>&nbsp;</p>
         </div>
       </div>
     </footer>
