デザイン調整

--- a/app/views/public/homes/index_for_tenant_promotion.html.erb
+++ b/app/views/public/homes/index_for_tenant_promotion.html.erb
@@ -12,10 +12,10 @@
     <div class="row">
       <div class="col-md-12 text-center">
         <div class="blog-inner">
-          <br />ユーザー登録はLINEチャネルから
+          <br />ユーザー登録（LINEチャネル）
           <div class="desc">
             <h3>LINE QR CODE</h3>
-            <p><img class="img-responsive" src="/images/line_qr_demo.png" alt="Demo"></p>
+            <p><img class="img-responsive" src="/images/line_qr_<%= @company.code %>.png" alt="<%= @company.code %>"></p>
             <p></p>
           </div>
         </div>
