--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -3,9 +3,27 @@
 <section class="content">
   <div class="card">
     <div class="card-header">
-      <h3 class="card-title">一覧</h3>
+      <h3 class="card-title">検索</h3>
+
+      <div class="card-tools">
+        <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
+        </button>
+      </div>
     </div>
 
+    <div class="card-body" style="display: block;">
+      <%= form_with model: @search, url: customers_path, method: :get, local:true do |f| %>
+        <div class="input-group">
+          <%= f.text_field :name, { autocomplete: "off", class: 'form-control', placeholder: '名前', maxlength: 20 } %>
+          <span class="input-group-append">
+            <%= f.button "検索", { class: 'btn btn-info' } %>
+          </span>
+        </div>
+      <% end %>
+    </div>
+  </div>
+
+  <div class="card">
     <div class="card-body">
       <table class="table table-bordered">
         <thead>
@@ -41,9 +59,6 @@
       </table>
 
       <%= paginate @customers %>
-    </div>
-
-    <div class="card-footer clearfix">
       <a href="<%= new_customer_path(company_code: @company.code ) %>" class="btn btn-info float-left">新規作成</a>
     </div>
   </div>
