デザイン調整

--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -59,7 +59,7 @@
       </table>
 
       <%= paginate @customers %>
-      <a href="<%= new_customer_path(company_code: @company.code ) %>" class="btn btn-info float-left">新規作成</a>
+      <a href="<%= new_customer_path(company_code: @company.code ) %>" class="btn btn-info float-left mt-1">新規作成</a>
     </div>
   </div>
 </section>
