デザイン調整

--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -16,7 +16,7 @@
         <div class="input-group">
           <%= f.text_field :name, { autocomplete: "off", class: 'form-control', placeholder: '名前', maxlength: 20 } %>
           <span class="input-group-append">
-            <%= f.button "検索", { class: 'btn btn-info' } %>
+            <%= f.submit "検索", { class: 'btn btn-info' } %>
           </span>
         </div>
       <% end %>
