--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title><%= @company.try(:name) || 'hairb' %></title>
+  <title><%= @company.try(:name) || 'hairs.fun' %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="XXXXX" />
   <meta name="keywords" content="YYYY" />
