--- a/app/views/layouts/_sub_sidebar.html.erb
+++ b/app/views/layouts/_sub_sidebar.html.erb
@@ -1,6 +1,7 @@
 <aside class="control-sidebar control-sidebar-dark">
   <div class="p-3">
-    <h5>操作</h5>
+    <p><a href="<%= edit_user_path(@company.code, current_user) %>">アカウント</a></p>
+    <p></p>
     <p><a href="<%= destroy_user_session_path(company_code: params[:company_code]) %>">ログアウト</a></p>
   </div>
 </aside>
