店舗情報編集機能

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -139,7 +139,7 @@
             </div>
 
             <div class="card-footer">
-              <%= form.submit class: 'btn btn-primary' %>
+              <%= form.submit class: 'btn btn-primary', data: { confirm: 'よろしいですか?' } %>
               <%= link_to('　削除　', customer_path(@company.code, customer), method: :delete, class: 'btn btn-sm btn-danger float-right', data: { confirm: "削除してよろしいですか？" }) if customer.persisted? %>
             </div>
           <% end %>
