--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -30,7 +30,7 @@
             </div>
 
             <div class="card-footer">
-              <%= form.submit class: 'btn btn-primary' %>
+              <%= form.submit class: 'btn btn-primary', data: { confirm: 'よろしいですか?' } %>
             </div>
           <% end %>
         </div>
