--- a/app/views/layouts/_main_footer.html.erb
+++ b/app/views/layouts/_main_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="main-footer" <%= "style='background-color:pink'".html_safe if ENV['MODE'].nil? %>>
+<footer class="main-footer">
 
   <div class="float-right d-none d-sm-inline">
     お知らせ
