--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -28,9 +28,7 @@
 
 </div>
 
-<% if notice || alert %>
-  <%= render '/layouts/notice_modal' %>
-<% end %>
+<%= render '/layouts/notice_and_alert_js' %>
 
 </body>
 </html>
