--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -66,8 +66,6 @@
     </footer>
   </div>
 
-  <% if notice || alert %>
-    <%= render '/layouts/notice_modal' %>
-  <% end %>
+  <%= render '/layouts/notice_and_alert_js' %>
 </body>
 </html>
