--- a/app/views/company/settings/edit.html.erb
+++ b/app/views/company/settings/edit.html.erb
@@ -8,6 +8,7 @@
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
           <li class="breadcrumb-item"><a href="<%= homes_path %>">ホーム</a></li>
+          <li class="breadcrumb-item"><a href="<%= company_setting_path %>"><%= Const::View::Name::COMPANY_SETTING_SHOW %></a></li>
           <li class="breadcrumb-item active"><%= Const::View::Name::COMPANY_SETTING_EDIT %></li>
         </ol>
       </div>
