--- a/app/views/layouts/line_regist.erb
+++ b/app/views/layouts/line_regist.erb
@@ -18,9 +18,7 @@
 
 <%= yield %>
 
-<% if notice || alert %>
-  <%= render '/layouts/notice_modal' %>
-<% end %>
+<%= render '/layouts/notice_and_alert_js' %>
 
 </body>
 </html>
