--- a/app/views/company/settings/show.html.erb
+++ b/app/views/company/settings/show.html.erb
@@ -34,7 +34,7 @@
           </tr>
           <tr>
             <th class="text-nowrap"><%= Company.human_attribute_name(:logo) %></th>
-            <td><%= image_tag @company.logo.try(:thumb_200).try(:url) %></td>
+            <td><%= image_tag @company.logo.try(:thumb_200).try(:url) if @company.logo.present? %></td>
           </tr>
         </tbody>
       </table>
