--- a/app/views/company/settings/show.html.erb
+++ b/app/views/company/settings/show.html.erb
@@ -40,6 +40,14 @@
             <th class="text-nowrap"><%= Company.human_attribute_name(:line_qr_code) %></th>
             <td><%= image_tag @company.line_qr_code.try(:thumb_220).try(:url) if @company.line_qr_code.present? %></td>
           </tr>
+          <tr>
+            <th class="text-nowrap"><%= Company.human_attribute_name(:line_channel_secret) %></th>
+            <td><%= @company.line_channel_secret.to_s %></td>
+          </tr>
+          <tr>
+            <th class="text-nowrap"><%= Company.human_attribute_name(:line_channel_token) %></th>
+            <td><%= @company.line_channel_token.to_s %></td>
+          </tr>
         </tbody>
       </table>
     </div>
